--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,14 @@
 name: 'CI Toolbox'
 description: 'CI Toolbox'
 author: 'Github'
-inputs: 
-  myInput:
-    description: 'Input to use'
-    default: 'world'
+inputs:
+  job:
+    required: true
+    default: 'hello'
+  token:
+    required: true
+  message:
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
